# uv-docker-example

./: .gitignore  Dockerfile  README.md  compose.yml  multistage.Dockerfile  pyproject.toml  run.bat  run.sh  standalone.Dockerfile
.devcontainer/: Dockerfile  docker-compose.yml
.github/workflows/: cd.yaml  ci.yaml
src/uv_docker_example/: __init__.py
