[project]
name = "uv-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
uv_docker_example = "uv_docker_example:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.2"
]
